methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  while (!isOverBaggle()){
    getGroundColor()
    if (!color.green){
      forward()
    }else {
      backward()
    }
  }
}